--- a/CartaReyesMagos/app/src/main/AndroidManifest.xml
+++ b/CartaReyesMagos/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ResumenCarta">
+
+        </activity>
     </application>
 
 </manifest>
